force-app/main/default/objects/Policy_Schedule__c/fields/VG_Last_Tax_Modified__c.field-meta.xml
<CustomField>
    <fullName>VG_Last_Tax_Modified__c</fullName>
    <label>Last Tax Modified</label>
    <type>DateTime</type>
</CustomField>