force-app/main/default/objects/Policy_Schedule__c/fields/VG_Lloyds_Product__c.field-meta.xml
<CustomField>
    <fullName>VG_Lloyds_Product__c</fullName>
    <label>Risk Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PB-Product Recall</fullName>
            </value>
            <value>
                <fullName>UA-GL/ PL excl Claims Made incl USA</fullName>
            </value>
            <value>
                <fullName>7T-Terrorism TPL</fullName>
            </value>
            <value>
                <fullName>UC-GL/ PL Claims Made incl USA</fullName>
            </value>
            <value>
                <fullName>NA-GL/ PL excl Claims Made excl USA</fullName>
            </value>
            <value>
                <fullName>NC-GL/ PL Claims Made excl USA</fullName>
            </value>
            <value>
                <fullName>Clinical Trials</fullName>
            </value>
            <value>
                <fullName>D2-D&amp;O excl FI incl USA</fullName>
            </value>
            <value>
                <fullName>D3-D&amp;O excl FI excl USA</fullName>
            </value>
            <value>
                <fullName>D4-D&amp;O FI incl USA</fullName>
            </value>
            <value>
                <fullName>D5-D&amp;O FI excl USA</fullName>
            </value>
            <value>
                <fullName>BB-Crime</fullName>
            </value>
            <value>
                <fullName>E2-PI Legal incl USA</fullName>
            </value>
            <value>
                <fullName>E3-PI Legal excl USA</fullName>
            </value>
            <value>
                <fullName>E4-PI Acc incl USA</fullName>
            </value>
            <value>
                <fullName>E5-PI Acc excl USA</fullName>
            </value>
            <value>
                <fullName>E6-PI Arch/ Eng incl USA</fullName>
            </value>
            <value>
                <fullName>E7-PI Arch/ Eng excl USA</fullName>
            </value>
            <value>
                <fullName>E8-PI excl Legal/ Acc / Arch/ Eng/ FI incl USA</fullName>
            </value>
            <value>
                <fullName>E9-PI excl Legal/ Acc / Arch/ Eng/ FI excl USA</fullName>
            </value>
            <value>
                <fullName>F2-PI FI incl USA</fullName>
            </value>
            <value>
                <fullName>F3-PI FI excl USA</fullName>
            </value>
            <value>
                <fullName>F4-PI Tech/ TelCo incl USA</fullName>
            </value>
            <value>
                <fullName>F5-PI Tech/ TelCo excl USA</fullName>
            </value>
            <value>
                <fullName>P3-PD Primary Layer Property excl USA</fullName>
            </value>
            <value>
                <fullName>P4-PD Full Value Property incl USA</fullName>
            </value>
            <value>
                <fullName>P5-PD Full Value Property excl USA</fullName>
            </value>
            <value>
                <fullName>P6-PD XS Layer Property incl USA</fullName>
            </value>
            <value>
                <fullName>P7-PD XS Layer Property excl USA</fullName>
            </value>
            <value>
                <fullName>PG-Op Power Gen Transmission/ Util excl Const</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>