force-app/main/default/objects/Policy_Schedule__c/fields/VG_Location_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>VG_Location_of_Risk__c</fullName>
    <formula>Policy__r.Insured__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location of Risk</label>
    <type>Text</type>
</CustomField>