force-app/main/default/objects/Policy_Schedule__c/fields/VG_Loss_Limit__c.field-meta.xml
<CustomField>
    <fullName>VG_Loss_Limit__c</fullName>
    <label>Loss Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>