force-app/main/default/objects/Policy_Schedule__c/fields/VG_Machinery_Breakdown_BI_Cover__c.field-meta.xml
<CustomField>
    <fullName>VG_Machinery_Breakdown_BI_Cover__c</fullName>
    <label>Machinery Breakdown BI Cover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>