force-app/main/default/objects/Policy_Schedule__c/fields/VG_MTA_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_MTA_Cancellation_Date__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>