force-app/main/default/objects/Policy_Schedule__c/fields/VG_MTA_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_MTA_Type__c</fullName>
    <label>MTA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Revision of Cover</fullName>
            </value>
            <value>
                <fullName>Declaration</fullName>
            </value>
            <value>
                <fullName>Reduction</fullName>
            </value>
            <value>
                <fullName>Run-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>