force-app/main/default/objects/Policy_Schedule__c/fields/VG_Municipality_Code__c.field-meta.xml
<CustomField>
    <fullName>VG_Municipality_Code__c</fullName>
    <label>Municipality Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>