force-app/main/default/objects/Policy_Schedule__c/fields/VG_Net_Premium_Receivable__c.field-meta.xml
<CustomField>
    <fullName>VG_Net_Premium_Receivable__c</fullName>
    <label>Net Premium Receivable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>