force-app/main/default/objects/Policy_Schedule__c/fields/VG_Net_Premium_Received__c.field-meta.xml
<CustomField>
    <fullName>VG_Net_Premium_Received__c</fullName>
    <formula>VG_Net_Premium_Due__c-VG_Net_Premium_Receivable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Premium Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>