force-app/main/default/objects/Policy_Schedule__c/fields/VG_Non_Taxable_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Non_Taxable_Premium__c</fullName>
    <label>Non - Taxable Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>