force-app/main/default/objects/Policy_Schedule__c/fields/VG_Norwegian_Nat_Cat_Pool_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Norwegian_Nat_Cat_Pool_Premium__c</fullName>
    <label>Norwegian Nat Cat Pool Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>