force-app/main/default/objects/Policy_Schedule__c/fields/VG_Number_Of_vehicle__c.field-meta.xml
<CustomField>
    <fullName>VG_Number_Of_vehicle__c</fullName>
    <label>Number Of vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>