force-app/main/default/objects/Policy_Schedule__c/fields/VG_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>VG_Occupancy__c</fullName>
    <label>Occupancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>