force-app/main/default/objects/Policy_Schedule__c/fields/VG_Overider_Amount__c.field-meta.xml
<CustomField>
    <fullName>VG_Overider_Amount__c</fullName>
    <formula>Gross_Written_Premium__c *  VG_Overider_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overider Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>