force-app/main/default/objects/Policy_Schedule__c/fields/VG_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Payment_Due_Date__c</fullName>
    <formula>IF( VG_Is_MTA__c , DATEVALUE( VG_Booked_Time__c )+60  ,  Policy__r.VG_Inception_Date__c + 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>