force-app/main/default/objects/Policy_Schedule__c/fields/VG_Plan_Rate__c.field-meta.xml
<CustomField>
    <fullName>VG_Plan_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Rate</label>
    <referenceTo>VG_Plan_Rate__c</referenceTo>
    <relationshipLabel>Policy Schedules</relationshipLabel>
    <relationshipName>Policy_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>