force-app/main/default/objects/Policy_Schedule__c/fields/VG_Pre_MTA_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Pre_MTA_Expiry_Date__c</fullName>
    <label>Pre MTA Expiry Date</label>
    <type>Date</type>
</CustomField>