force-app/main/default/objects/Policy_Schedule__c/fields/VG_Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>VG_Rate_Change__c</fullName>
    <label>Rate Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>