force-app/main/default/objects/Policy_Schedule__c/fields/VG_Reinsurance_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Reinsurance_Type__c</fullName>
    <label>Reinsurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Treaty</fullName>
            </value>
            <value>
                <fullName>Facultative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>