force-app/main/default/objects/Policy_Schedule__c/fields/VG_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Reporting_Date__c</fullName>
    <formula>IF( VG_Is_MTA__c , 
VG_Booked_Time__c , Policy__r.VG_Bound_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Date</label>
    <type>DateTime</type>
</CustomField>