force-app/main/default/objects/Policy_Schedule__c/fields/VG_Retired_Directors_Additional_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Retired_Directors_Additional_Premium__c</fullName>
    <label>Retired Directors Additional Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>