force-app/main/default/objects/Policy_Schedule__c/fields/VG_Retired_Directors_Year__c.field-meta.xml
<CustomField>
    <fullName>VG_Retired_Directors_Year__c</fullName>
    <label>Retired Directors Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>