force-app/main/default/objects/Policy_Schedule__c/fields/VG_Risk_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Risk_Premium__c</fullName>
    <label>Risk Premium (Annual)</label>
    <summarizedField>VG_Policy_Schedule_Asset__c.VG_Premium__c</summarizedField>
    <summaryForeignKey>VG_Policy_Schedule_Asset__c.VG_Policy_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>