force-app/main/default/objects/Policy_Schedule__c/fields/VG_Risk_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Risk_Start_Date__c</fullName>
    <label>Risk Start Date</label>
    <type>Date</type>
</CustomField>