force-app/main/default/objects/Policy_Schedule__c/fields/VG_Risk_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Risk_Transaction_Type__c</fullName>
    <formula>if(  Policy__r.VG_Is_Renewal__c ,&apos;Renewal&apos;,if( TEXT(VG_MTA_Type__c) =&apos;Cancellation&apos;,&apos;Cancellation&apos;,if( TEXT(VG_MTA_Type__c) =&apos;Extension&apos;,&apos;Extension&apos;,if(  OR(TEXT(VG_MTA_Type__c) =&apos;Declaration&apos;,TEXT(VG_MTA_Type__c) =&apos;Revision of Cover&apos;),&apos;Endorsement&apos;,&apos;New Business&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>