force-app/main/default/objects/Policy_Schedule__c/fields/VG_Selected_Weight__c.field-meta.xml
<CustomField>
    <fullName>VG_Selected_Weight__c</fullName>
    <label>Selected Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>