force-app/main/default/objects/Policy_Schedule__c/fields/VG_Side_B_Rentention__c.field-meta.xml
<CustomField>
    <fullName>VG_Side_B_Rentention__c</fullName>
    <label>Side B Rentention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>