force-app/main/default/objects/Policy_Schedule__c/fields/VG_Side_C_Retention_Currency__c.field-meta.xml
<CustomField>
    <fullName>VG_Side_C_Retention_Currency__c</fullName>
    <label>Side_C_Retention_Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>