force-app/main/default/objects/Policy_Schedule__c/fields/VG_Structure__c.field-meta.xml
<CustomField>
    <fullName>VG_Structure__c</fullName>
    <label>Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excess of Loss</fullName>
            </value>
            <value>
                <fullName>Aggregate XoL</fullName>
            </value>
            <value>
                <fullName>Aggregate Stop Loss</fullName>
            </value>
            <value>
                <fullName>Quota Share</fullName>
            </value>
            <value>
                <fullName>Surplus</fullName>
            </value>
            <value>
                <fullName>Proportional</fullName>
            </value>
            <value>
                <fullName>Non-Proportional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>