force-app/main/default/objects/Policy_Schedule__c/fields/VG_Sub_Structure__c.field-meta.xml
<CustomField>
    <fullName>VG_Sub_Structure__c</fullName>
    <label>Sub-Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Event</fullName>
            </value>
            <value>
                <fullName>Per Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>