force-app/main/default/objects/Policy_Schedule__c/fields/VG_Tax_Amount_GWP_100__c.field-meta.xml
<CustomField>
    <fullName>VG_Tax_Amount_GWP_100__c</fullName>
    <label>Tax Amount GWP 100%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>