force-app/main/default/objects/Policy_Schedule__c/fields/VG_Tax_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>VG_Tax_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Not Applicable</label>
    <type>Checkbox</type>
</CustomField>