force-app/main/default/objects/Policy_Schedule__c/fields/VG_Technical_Loss_Ratio__c.field-meta.xml
<CustomField>
    <fullName>VG_Technical_Loss_Ratio__c</fullName>
    <label>Gross Technical Loss Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>