force-app/main/default/objects/Policy_Schedule__c/fields/VG_Technical_Model_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Technical_Model_Premium__c</fullName>
    <label>Technical Model Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>