force-app/main/default/objects/Policy_Schedule__c/fields/VG_Total_Layer_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Total_Layer_Premium__c</fullName>
    <formula>Risk_Premium_Pro__c + Endorsement_Premium_Pro__c + Premium_Adjustment_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Layer Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>