force-app/main/default/objects/Policy_Schedule__c/fields/VG_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Transaction_Type__c</fullName>
    <formula>IF( OR( VG_Risk_Transaction_Type__c ==&apos;Renewal&apos;,VG_Risk_Transaction_Type__c ==&apos;New Business&apos;) ,&apos;OP&apos;,   IF( Gross_Written_Premium__c &gt;= 0 , &apos;AP&apos;, &apos;RP&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Transaction Type</label>
    <type>Text</type>
</CustomField>