force-app/main/default/objects/Policy_Schedule__c/fields/VG_Turn_Over__c.field-meta.xml
<CustomField>
    <fullName>VG_Turn_Over__c</fullName>
    <label>Turn Over</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>