force-app/main/default/objects/Policy_Schedule__c/fields/VG_Type_Of_Operation__c.field-meta.xml
<CustomField>
    <fullName>VG_Type_Of_Operation__c</fullName>
    <label>Type Of Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>