force-app/main/default/objects/Policy_Schedule__c/fields/VG_VAT__c.field-meta.xml
<CustomField>
    <fullName>VG_VAT__c</fullName>
    <label>VAT (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>