force-app/main/default/objects/Policy_Schedule__c/fields/VG_Witholding_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>VG_Witholding_Tax_Amount__c</fullName>
    <label>Witholding Tax (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>