force-app/main/default/objects/Policy_Schedule__c/fields/VG_Wording__c.field-meta.xml
<CustomField>
    <fullName>VG_Wording__c</fullName>
    <label>Wording</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBP 2.0 - All Risks Commercial Property Insurance</fullName>
            </value>
            <value>
                <fullName>BBCAR 2.0 - All Risk Insurance for Construction Works Activities</fullName>
            </value>
            <value>
                <fullName>BBE 2.0 - Crisis Insurance</fullName>
            </value>
            <value>
                <fullName>BBS 2.0 - Safety Regulations</fullName>
            </value>
            <value>
                <fullName>BBLI (f) 2.0 - Public and Products Liability Insurance</fullName>
            </value>
            <value>
                <fullName>BBLE 2.0 - Legal Expenses Insurance</fullName>
            </value>
            <value>
                <fullName>BBC (f)2.0 - Commercial Crime</fullName>
            </value>
            <value>
                <fullName>BBDO 2.0 - Directors  Officers Liability Insurance</fullName>
            </value>
            <value>
                <fullName>BBG 2.0 - General Conditions and Definitions</fullName>
            </value>
            <value>
                <fullName>BBG 2.2 - General Conditions and Definitions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>