force-app/main/default/objects/Policy_Schedule__c/fields/Written_share__c.field-meta.xml
<CustomField>
    <fullName>Written_share__c</fullName>
    <label>Written share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>