force-app/main/default/objects/Policy_Schedule__c/recordTypes/Aesir.recordType-meta.xml
<RecordType>
    <fullName>Aesir</fullName>
    <active>true</active>
    <label>Aesir</label>
</RecordType>