force-app/main/default/objects/Policy_Schedule__c/recordTypes/Gentium.recordType-meta.xml
<RecordType>
    <fullName>Gentium</fullName>
    <active>true</active>
    <label>Gentium</label>
</RecordType>