force-app/main/default/objects/Policy_Schedule__c/recordTypes/VG_Bridge.recordType-meta.xml
<RecordType>
    <fullName>VG_Bridge</fullName>
    <active>true</active>
    <label>Bridge</label>
</RecordType>