force-app/main/default/objects/Policy_Schedule__c/validationRules/PS_Name_Updation.validationRule-meta.xml
<ValidationRule>
    <fullName>PS_Name_Updation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISNEW() ) , ISCHANGED( Name ) )</errorConditionFormula>
    <errorMessage>Cannot update Policy Schedule number</errorMessage>
</ValidationRule>