force-app/main/default/objects/Policy_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VG_Coverages__c</columns>
    <columns>VG_Number_Of_vehicle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>